--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <h1> this is header 1 </h1>
 <h2> this is header 2 </h2>
 <hr>
-<p> this is paragraph text </p>
-<input type="checkbox">
-click me
+<p> this is paragraph text ok </p>
+<input type="checkbox"> click me
+<br>
+<img src="images/sydney.jpg" alt="">
+
   </body>
 </html>
