changed main page to index, got rid of test page

--- a/index.html
+++ b/index.html
@@ -2,17 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>this names the tab</title>
+    <title>Elliot Bohlen</title>
   </head>
   <body>
-
-<h1> this is header 1 </h1>
-<h2> this is header 2 </h2>
-<hr>
-<p> this is paragraph text ok </p>
-<input type="checkbox"> click me
-<br>
-<img src="images/sydney.jpg" alt="">
-
+    <p> link to interview
+    link to conditional design
+  </p>
   </body>
 </html>
