more updating, made test page real index

--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Elliot Bohlen</title>
+    <title>Main page???</title>
   </head>
   <body>
-    <p> link to interview
-        link to conditional design
-  </p>
+<br>
+
+    <button onclick="myFunction()">hi</button>
+    <p id="demo"></p>
+    <script>
+    function myFunction() {
+      document.getElementById("demo").innerHTML = "hey, my name's elliot";
+    }
+    </script>
+<br>
+<form>
+  <i>  Introduce yourself... </i>
+  <br>
+  <input type="text" name="FirstName" value="">
+<button type="button" onclick="alert('nice to meet you')">hey</button>
+  </form>
+<p> here will be a link to the conditional design thing and the interview but idk how to do that yet </p>
+
   </body>
 </html>
