--- a/random code.html
+++ b/random code.html
@@ -126,6 +126,14 @@ Drop down list w options
 
 Iframe (small window)
 <iframe src="https://www.w3schools.com"></iframe>
+<button onclick="myFunction()">Click me</button>
 
+<p id="demo"></p>
+
+<script>
+function myFunction() {
+  document.getElementById("demo").innerHTML = "Hello World";
+}
+</script>
   </body>
 </html>
