--- a/testing main.html
+++ b/testing main.html
@@ -5,7 +5,15 @@
     <title>Main page???</title>
   </head>
   <body>
+<br>
 
+    <button onclick="myFunction()">hi</button>
+    <p id="demo"></p>
+    <script>
+    function myFunction() {
+      document.getElementById("demo").innerHTML = "hey, my name's elliot";
+    }
+    </script>
 <br>
 <form>
   <i>  Introduce yourself... </i>
@@ -13,27 +21,6 @@
   <input type="text" name="FirstName" value="">
 <button type="button" onclick="alert('nice to meet you')">hey</button>
   </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
   </body>
