--- a/conditional.html
+++ b/conditional.html
@@ -14,7 +14,7 @@
 <strong> Person 1 </strong> (black pen) draws straight lines on page <br>
 <strong> Person 2 </strong> (green pen) must draw lines intersecting person 1’s lines <br>
 <strong> Person 3 </strong> (pencil) draws circles on the page <br>
-Each have 30 seconds to do each step <br>
+<i>Each have 30 seconds to do each step</i> <br>
 </p>
 <img src="images/version1.jpg" alt="">
 
@@ -23,7 +23,7 @@ Each have 30 seconds to do each step <br>
 <strong> Person 1 </strong> (black pen) draws straight lines on page <br>
 <strong> Person 2 </strong> (green) must draw lines perpendicularly intersecting person 1’s lines<br>
 <strong> Person 3 </strong> (pencil) draws circles on the page, cannot intersect with any of the previous lines<br>
-Each have 30 seconds to do each step
+<i>Each have 30 seconds to do each step</i>
 </p>
 <img src="images/version2.jpg" alt="">
 
