--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <input type="text" name="FirstName" value="">
 <button type="button" onclick="alert('nice to meet you')">hey</button>
   </form>
-<p> here will be a link to the conditional design thing and the interview but idk how to do that yet </p>
+<p> <a href="https://eebohlen.github.io/creativecomputing/conditional">conditional design exercise</a>
+  <br>
+<a href="https://eebohlen.github.io/creativecomputing/interview">interview</a></p>
 
   </body>
 </html>
