--- a/random code.html
+++ b/random code.html
@@ -135,5 +135,7 @@ function myFunction() {
   document.getElementById("demo").innerHTML = "Hello World";
 }
 </script>
+<a href="/interview.html" >link< </a>
+fix path cus its fucked up ^
   </body>
 </html>
