--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
     <title>Main page???</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 <br>
