--- a/conditional.html
+++ b/conditional.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Conditional Design Exercise</title>
-  </head>
+    <link rel="stylesheet" href="style.css">
+    </head>
+    
   <body>
 <h1>Conditional Design Exercise</h1>
 <br>
