--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Main page???</title>
+    <title>ELLIOT</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 <br>
-
     <button onclick="myFunction()">hi</button>
     <p id="demo"></p>
     <script>
@@ -16,16 +15,20 @@
       document.getElementById("demo").innerHTML = "hey, my name's elliot";
     }
     </script>
-<br>
+
 <form>
-  <i>  Introduce yourself... </i>
-  <br>
+  <p>  Introduce yourself... </p><br>
   <input type="text" name="FirstName" value="">
 <button type="button" onclick="alert('nice to meet you')">hey</button>
   </form>
-<p> <a href="https://eebohlen.github.io/creativecomputing/conditional">conditional design exercise</a>
-  <br>
-<a href="https://eebohlen.github.io/creativecomputing/interview">interview</a></p>
+
+<ul>
+ <li> <a href="https://eebohlen.github.io/creativecomputing/conditional">conditional design exercise</a> </li>
+<li> <a href="https://eebohlen.github.io/creativecomputing/interview">interview</a> </li>
+</ul>
+
+
+
 
   </body>
 </html>
