--- a/interview.html
+++ b/interview.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Interview</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 <h2> Interview with an English Major about Shakespeare <small>I guess</small> </h2>
