--- a/interview.html
+++ b/interview.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Interview</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/interviewstyle.css">
   </head>
+
   <body>
 <h2> Interview with an English Major about Shakespeare <small>I guess</small> </h2>
 
+<p>
 <strong> Elliot: </strong> So what can I interview you about?
 <br>
 <strong> Sydney: </strong> Like nothing, can you count how many times I say um?
@@ -51,7 +53,7 @@ or <a href="http://shakespeare.mit.edu/macbeth/full.html"><i>Macbeth</i> </a>.
 <strong> E: </strong>  Anything else you wanna say?
 <br>
 <strong> S: </strong> No.
-<br>
+</p>
 
   </body>
 </html>
