--- a/testingmain.html
+++ b/testingmain.html
@@ -4,21 +4,29 @@
     <meta charset="utf-8">
     <link rel="icon" href="images/red.jpg" type="image/gif">
     <title>ELLIOT</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/test.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   </head>
   <body>
 
+<h1>ELLIOT BOHLEN</h1>
+<br>
+<br>
+<br>
+<br>
+<br> <!– figure out how to pad buttons and shit ->
+
+<div>
     <button onclick="myFunction()">hi</button>
     <p id="demo"></p>
     <script>
     function myFunction() {
-      document.getElementById("demo").innerHTML = "hey, my name's elliot";
+      document.getElementById("demo").innerHTML = "hey, my name's elliot. im a comm d major and trying my best";
     }
     </script>
 
 <form>
-  <p>  introduce yourself </p>
+  <p>  <i>introduce yourself </i> </p>
   <input type="text" name="FirstName" value="">
 <button type="button" onclick="alert('nice to meet you')">hey</button>
   </form>
@@ -31,6 +39,6 @@
     <li> <a href="https://eebohlen.github.io/creativecomputing/interview">interview</a> </li>
     </ul>
   </details>
-
+</div>
   </body>
 </html>
