--- a/testingmain.html
+++ b/testingmain.html
@@ -10,12 +10,13 @@
   <body>
 
 <h1>ELLIOT BOHLEN</h1>
+ <!– figure out how to pad buttons and shit->
+<a href="http://s78.photobucket.com/user/rswedlo/media/gif/Checkerflag.gif.html"
+target="_blank"><img src="http://i78.photobucket.com/albums/j112/rswedlo/gif/Checkerflag.gif"
+border="0" alt=" photo Checkerflag.gif"></a>
 <br>
 <br>
 <br>
-<br>
-<br> <!– figure out how to pad buttons and shit ->
-
 <div>
     <button onclick="myFunction()">hi</button>
     <p id="demo"></p>
@@ -26,7 +27,7 @@
     </script>
 
 <form>
-  <p>  <i>introduce yourself </i> </p>
+  <p id="subtitle"> introduce yourself  </p>
   <input type="text" name="FirstName" value="">
 <button type="button" onclick="alert('nice to meet you')">hey</button>
   </form>
