cleaning up- divs

--- a/index.html
+++ b/index.html
@@ -4,42 +4,56 @@
     <meta charset="utf-8">
     <link rel="icon" href="images/red.jpg" type="image/gif">
     <title>ELLIOT</title>
-    <link rel="stylesheet" href="css/test.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   </head>
   <body>
-
 <h1>ELLIOT BOHLEN</h1>
- <!– figure out how to pad buttons and shit->
+
+<div>
 <a href="http://s78.photobucket.com/user/rswedlo/media/gif/Checkerflag.gif.html"
 target="_blank"><img src="http://i78.photobucket.com/albums/j112/rswedlo/gif/Checkerflag.gif"
 border="0" alt=" photo Checkerflag.gif"></a>
-<br>
-<br>
-<br>
+</div>
+
 <div>
-    <button onclick="myFunction()">hi</button>
+    <button onclick="myFunction()">?</button>
     <p id="demo"></p>
     <script>
     function myFunction() {
-      document.getElementById("demo").innerHTML = "hey, my name's elliot. im a comm d major and trying my best";
+      document.getElementById("demo").innerHTML = "hey, my name's elliot. im a comm d major at parsons and im trying my best";
     }
     </script>
-
+</div>
+<div>
 <form>
   <p id="subtitle"> introduce yourself  </p>
-  <input type="text" name="FirstName" value="">
-<button type="button" onclick="alert('nice to meet you')">hey</button>
-  </form>
-
-<br>
+  <input type="text" name="FirstName" value=""> <button type="button" onclick="alert('nice to meet you')">hey</button>
+  </form> </div>
+<div>
   <details>
     <summary>projects</summary>
-    <ul>
-     <li> <a href="https://eebohlen.github.io/creativecomputing/conditional">conditional design exercise</a> </li>
-    <li> <a href="https://eebohlen.github.io/creativecomputing/interview">interview</a> </li>
-    </ul>
+  <p>
+    <a href="https://eebohlen.github.io/creativecomputing/conditional">conditional design exercise</a>
+    <br>
+    <a href="https://eebohlen.github.io/creativecomputing/interview">interview</a>
+    <br>
+    <a href="https://portfolio.newschool.edu/elliotbohlen/">electronic portfolio</a>
+  </p>
+  </details>
+  <details>
+    <summary>????</summary>
+  <p>
+    <a href="https://google.com">x</a>
+    <br>
+    <a href="https://google.com">y</a>
+    <br>
+    <a href="https://google.com">z</a>
+  </p>
   </details>
 </div>
+
+
+
   </body>
 </html>
