--- a/random code.html
+++ b/random code.html
@@ -123,6 +123,9 @@ Drop down list w options
     <td>$100</td>
   </tr>
 </table>
+<textarea name="message" rows="10" cols="30">
+The cat was playing in the garden.
+</textarea>
 
 Iframe (small window)
 <iframe src="https://www.w3schools.com"></iframe>
