--- a/testingmain.html
+++ b/testingmain.html
@@ -2,44 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="images/red.jpg" type="image/gif">
-    <title>ELLIOT</title>
-    <link rel="stylesheet" href="css/test.css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <title></title>
   </head>
   <body>
-
-<h1>ELLIOT BOHLEN</h1>
- <!– figure out how to pad buttons and shit->
-<a href="http://s78.photobucket.com/user/rswedlo/media/gif/Checkerflag.gif.html"
-target="_blank"><img src="http://i78.photobucket.com/albums/j112/rswedlo/gif/Checkerflag.gif"
-border="0" alt=" photo Checkerflag.gif"></a>
-<br>
-<br>
-<br>
-<div>
-    <button onclick="myFunction()">hi</button>
-    <p id="demo"></p>
-    <script>
-    function myFunction() {
-      document.getElementById("demo").innerHTML = "hey, my name's elliot. im a comm d major and trying my best";
-    }
-    </script>
-
-<form>
-  <p id="subtitle"> introduce yourself  </p>
-  <input type="text" name="FirstName" value="">
-<button type="button" onclick="alert('nice to meet you')">hey</button>
-  </form>
-
-<br>
-  <details>
-    <summary>projects</summary>
-    <ul>
-     <li> <a href="https://eebohlen.github.io/creativecomputing/conditional">conditional design exercise</a> </li>
-    <li> <a href="https://eebohlen.github.io/creativecomputing/interview">interview</a> </li>
-    </ul>
-  </details>
-</div>
+  <p>  working on it </P>
   </body>
 </html>
