--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   </head>
+
   <body>
-<h1>ELLIOT BOHLEN</h1>
+<h1>
+  <a href="">E  <a href="">L <a href="">L  <a href="">I  <a href="">O <a href="">T
+  <a href="">B  <a href="">O <a href="">H  <a href="">L  <a href="">E <a href="">N
+  </h1>
 
 <div>
 <a href="http://s78.photobucket.com/user/rswedlo/media/gif/Checkerflag.gif.html"
@@ -53,7 +57,7 @@ border="0" alt=" photo Checkerflag.gif"></a>
   </details>
 </div>
 
-
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
   </body>
 </html>
