--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@ border="0" alt=" photo Checkerflag.gif"></a>
 <div>
   <details>
     <summary>projects</summary>
-  <p>
+  <p  class="details">
     <a href="https://eebohlen.github.io/creativecomputing/conditional">conditional design exercise</a>
     <br>
     <a href="https://eebohlen.github.io/creativecomputing/interview">interview</a>
     <br>
     <a href="https://portfolio.newschool.edu/elliotbohlen/">electronic portfolio</a>
   </p>
-  </details>
+</details>
+<br>
   <details>
     <summary>????</summary>
-  <p>
+  <p class="details">
     <a href="https://google.com">x</a>
     <br>
     <a href="https://google.com">y</a>
