--- a/interview.html
+++ b/interview.html
@@ -2,58 +2,70 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Interview</title>
-    <link rel="stylesheet" href="css/interviewstyle.css">
+    <title>test</title>
+    <link rel="stylesheet" href="css/test.css">
+      <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   </head>
-
   <body>
-<h2> Interview with an English Major about Shakespeare <small>I guess</small> </h2>
+  <!-- Side navigation -->
+  <div class="sidenav">
+<h1>IN <br> TE <br> RV<br> IE<br> W:</h1>
+  <!-- links not using
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+    -->
+  </div>
 
-<p>
-<strong> Elliot: </strong> So what can I interview you about?
-<br>
-<strong> Sydney: </strong> Like nothing, can you count how many times I say um?
- <br>
-<strong> E: </strong>  Haha sure.
-<br>
-<strong> S: </strong> Really think about it. I don’t know anything about anything.
-<br>
-<strong> E: </strong>  Hold on I have to record this so I can type it all up later.
-<br>
-<strong> S: </strong> This is so stressful for me.
-<br>
-<strong> E: </strong>  Ok so, Shakespeare, what do you know about him English major?
-<br>
-<strong> S: </strong> I don’t know.
-<br>
-<strong> E: </strong>  So like what’s a <a href="https://www.poetryfoundation.org/learn/glossary-terms/sonnet">sonnet</a>? Shakespeare wrote them.
-<br>
-<strong> S: </strong> It has fourteen lines, usually about love, and usually by a guy about a woman who he can’t have.
-Usually in <a href="https://en.wikipedia.org/wiki/Iambic_pentameter">iambic pentameter</a>
-<small>(she stuttered).</small> There’s two different kinds but I can’t remember. American people were like <i>“we
- want our own sonnet,”</i> and so an American sonnet is any poem with fourteen lines that calls itself a sonnet, cus that’s just
- how it is. I’m bad at them because iambic pentameter stresses me out.
-<br>
-<strong> E: </strong>  Yeah you know a lot about poetry.
-<br>
-<strong> S: </strong> I’ve taken two poetry classes…
-<br>
-<strong> E: </strong>  Do you have a favorite Shakespeare play?
-<br>
-<strong> S: </strong> My favorite play is <a href="http://shakespeare.mit.edu/cleopatra/full.html" ><i>Antony and Cleopatra</i> </a>
-or <a href="http://shakespeare.mit.edu/macbeth/full.html"><i>Macbeth</i> </a>.
-<br>
-<strong> E: </strong>  How come?
-<br>
-<strong> S: </strong> Um, I like <i>Antony and Cleopatra </i> because it’s the most poetic one and it’s pretty emo.
- And I like <i>Macbeth </i> because there’s witches, and I have this haircut so I have to like witches.
-<br>
-<strong> E+S: </strong> <i>Haha </i>
-<br>
-<strong> E: </strong>  Anything else you wanna say?
-<br>
-<strong> S: </strong> No.
-</p>
-
+  <!-- Page content -->
+  <div class="main">
+      <body>
+    <p>
+    <i> Elliot:</i>  So what can I interview you about?
+    <br>
+    <strong> Sydney: Like nothing, can you count how many times I say um?  </strong>
+     <br>
+    <i> E: Haha sure.</i>
+    <br>
+    <strong> S: Really think about it. I don’t know anything about anything.</strong>
+    <br>
+    <i> E: </i>  Hold on I have to record this so I can type it all up later.
+    <br>
+    <strong> S: This is so stressful for me. </strong>
+    <br>
+    <i> E: </i>  Ok so, Shakespeare, what do you know about him English major?
+    <br>
+    <strong> S: I don’t know.</strong>
+    <br>
+    <i> E: </i>  So like what’s a <a href="https://www.poetryfoundation.org/learn/glossary-terms/sonnet">sonnet</a>? Shakespeare wrote them.
+    <br>
+    <strong> S:  It has fourteen lines, usually about love, and usually by a guy about a woman who he can’t have.
+    Usually in <a href="https://en.wikipedia.org/wiki/Iambic_pentameter">iambic pentameter</a>
+    <small>(she stuttered).</small> There’s two different kinds but I can’t remember. American people were like <i>“we
+     want our own sonnet,”</i> and so an American sonnet is any poem with fourteen lines that calls itself a sonnet, cus that’s just
+     how it is. I’m bad at them because iambic pentameter stresses me out.</strong>
+    <br>
+    <i> E: </i>  Yeah you know a lot about poetry.
+    <br>
+    <strong> S: I’ve taken two poetry classes…</strong>
+    <br>
+    <i> E: </i>  Do you have a favorite Shakespeare play?
+    <br>
+    <strong> S:  My favorite play is <a href="http://shakespeare.mit.edu/cleopatra/full.html" ><i>Antony and Cleopatra</i> </a>
+    or <a href="http://shakespeare.mit.edu/macbeth/full.html"><i>Macbeth</i> </a>.</strong>
+    <br>
+    <i> E: </i>  How come?
+    <br>
+    <strong> S:  Um, I like <i>Antony and Cleopatra </i> because it’s the most poetic one and it’s pretty emo.
+     And I like <i>Macbeth </i> because there’s witches, and I have this haircut so I have to like witches.</strong>
+    <br>
+    <strong> E+S: </strong> <i>Haha </i>
+    <br>
+    <i> E: </i>  Anything else you wanna say?
+    <br>
+    <strong> S: No.</strong>
+    </p>
+  </div>
   </body>
 </html>
