--- a/interview.html
+++ b/interview.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>test</title>
+    <title>INTERVIEW</title>
     <link rel="stylesheet" href="css/interviewstyle.css">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   </head>
