cleaned/organized index code

--- a/index.html
+++ b/index.html
@@ -7,55 +7,56 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   </head>
-
   <body>
+
 <h1>
   <a href="">E  <a href="">L <a href="">L  <a href="">I  <a href="">O <a href="">T
   <a href="">B  <a href="">O <a href="">H  <a href="">L  <a href="">E <a href="">N
   </h1>
 
-<div>
-<a href="http://s78.photobucket.com/user/rswedlo/media/gif/Checkerflag.gif.html"
-target="_blank"><img src="http://i78.photobucket.com/albums/j112/rswedlo/gif/Checkerflag.gif"
-border="0" alt=" photo Checkerflag.gif"></a>
+<div> <!--flag-->
+    <a href="http://s78.photobucket.com/user/rswedlo/media/gif/Checkerflag.gif.html"
+    target="_blank"><img src="http://i78.photobucket.com/albums/j112/rswedlo/gif/Checkerflag.gif"
+    border="0" alt=" photo Checkerflag.gif"></a>
 </div>
-
-<div>
+<div> <!--intro ? button-->
     <button onclick="myFunction()">?</button>
     <p id="demo"></p>
     <script>
     function myFunction() {
-      document.getElementById("demo").innerHTML = "hey, my name's elliot. im a comm d major at parsons and im trying my best";
-    }
+    document.getElementById("demo").innerHTML = "hey, my name's elliot. im a comm d major at parsons and im trying my best";}
     </script>
 </div>
-<div>
-<form>
+
+<div> <!--form and button-->
+    <form>
   <p id="subtitle"> introduce yourself  </p>
-  <input type="text" name="FirstName" value=""> <button type="button" onclick="alert('nice to meet you')">hey</button>
-  </form> </div>
-<div>
+  <input type="text" name="FirstName" value=""> <button type="button"
+  onclick="alert('nice to meet you')">hey</button>
+</form> </div>
+
+<div> <!--details/links-->
   <details>
     <summary>projects</summary>
-  <p  class="details">
+    <p>
     <a href="https://eebohlen.github.io/creativecomputing/conditional">conditional design exercise</a>
     <br>
     <a href="https://eebohlen.github.io/creativecomputing/interview">interview</a>
     <br>
-    <a href="https://portfolio.newschool.edu/elliotbohlen/">electronic portfolio</a>
-  </p>
-</details>
-<br>
+    <a href="https://portfolio.newschool.edu/elliotbohlen/">electronic portfolio</a> </p>
+  </details>
+  <br>
+  <!-- nulling second wip link set
   <details>
-    <summary>????</summary>
-  <p class="details">
+  <summary>????</summary>
+  <p>
     <a href="https://google.com">x</a>
     <br>
     <a href="https://google.com">y</a>
     <br>
     <a href="https://google.com">z</a>
   </p>
-  </details>
+  </details> -->
 </div>
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
