--- a/interview.html
+++ b/interview.html
@@ -9,7 +9,7 @@
   <body>
   <!-- Side navigation -->
   <div class="sidenav">
-<h1>IN <br> TE <br> RV<br> IE<br> W:</h1>
+<h1 id="title">IN <br> TE <br> RV<br> I E<br> W:</h1>
   <!-- links not using
     <a href="#">About</a>
     <a href="#">Services</a>
@@ -19,8 +19,8 @@
   </div>
 
   <!-- Page content -->
-  <div class="main">
-      <body>
+  <div class="main"> <!-- inteview text -->
+    <body>
     <p>
     <i> Elliot:</i>  So what can I interview you about?
     <br>
@@ -67,5 +67,6 @@
     <strong> S: No.</strong>
     </p>
   </div>
+
   </body>
 </html>
