fixing link issue with index header, refining interveiw

--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
   </head>
   <body>
 
-<h1>
-  <a href="">E  <a href="">L <a href="">L  <a href="">I  <a href="">O <a href="">T
-  <a href="">B  <a href="">O <a href="">H  <a href="">L  <a href="">E <a href="">N
-  </h1>
+<DIV> <!--header-->
+    <h1 class="title">E</h1>
+    <h1 class="title">L</h1>
+    <h1 class="title">L</h1>
+    <h1 class="title">I</h1>
+    <h1 class="title">O</h1>
+    <h1 class="title" id="spacing">T</h1>
+
+    <h1 class="title">B</h1>
+    <h1 class="title">O</h1>
+    <h1 class="title">H</h1>
+    <h1 class="title">L</h1>
+    <h1 class="title">E</h1>
+    <h1 class="title">N</h1>
+  </div>
 
 <div> <!--flag-->
     <a href="http://s78.photobucket.com/user/rswedlo/media/gif/Checkerflag.gif.html"
@@ -26,10 +37,9 @@
     function myFunction() {
     document.getElementById("demo").innerHTML = "hey, my name's elliot. im a comm d major at parsons and im trying my best";}
     </script>
-</div>
 
-<div> <!--form and button-->
-    <form>
+
+<form> <!--form and button-->
   <p id="subtitle"> introduce yourself  </p>
   <input type="text" name="FirstName" value=""> <button type="button"
   onclick="alert('nice to meet you')">hey</button>
