--- a/index.html
+++ b/index.html
@@ -49,11 +49,16 @@
   <details>
     <summary>projects</summary>
     <p>
+    <a href="https://eebohlen.github.io/creativecomputing/mirrorme">how are you</a>
+    <br>
     <a href="https://eebohlen.github.io/creativecomputing/conditional">conditional design exercise</a>
     <br>
     <a href="https://eebohlen.github.io/creativecomputing/interview">interview</a>
     <br>
-    <a href="https://portfolio.newschool.edu/elliotbohlen/">electronic portfolio</a> </p>
+    <a href="https://portfolio.newschool.edu/elliotbohlen/">electronic portfolio</a>
+    <br>
+
+  </p>
   </details>
   <br>
   <!-- nulling second wip link set
