--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
   <details>
     <summary>projects</summary>
     <p>
-    <a href="https://eebohlen.github.io/creativecomputing/mirrorme">how are you</a>
+    <a href="https://elliotbohlen.github.io/creativecomputing/mirrorme">how are you</a>
     <br>
-    <a href="https://eebohlen.github.io/creativecomputing/conditional">conditional design exercise</a>
+    <a href="https://elliotbohlen.github.io/creativecomputing/conditional">conditional design exercise</a>
     <br>
-    <a href="https://eebohlen.github.io/creativecomputing/interview">interview</a>
+    <a href="https://elliotbohlen.github.io/creativecomputing/interview">interview</a>
     <br>
     <a href="https://portfolio.newschool.edu/elliotbohlen/">electronic portfolio</a>
     <br>
