stylized conditionaldesign ex

--- a/conditional.html
+++ b/conditional.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Conditional Design Exercise</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/conditional.css">
+      <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     </head>
-    
+
   <body>
 <h1>Conditional Design Exercise</h1>
 <br>
 
 <h2>Rules V.1</h2>
-
 <p>
 <strong> Person 1 </strong> (black pen) draws straight lines on page <br>
 <strong> Person 2 </strong> (green pen) must draw lines intersecting person 1’s lines <br>
@@ -19,6 +19,7 @@
 <i>Each have 30 seconds to do each step</i> <br>
 </p>
 <img src="images/version1.jpg" alt="">
+<br>
 
 <h2>Rules V.2</h2>
 <p>
