--- a/conditional.html
+++ b/conditional.html
@@ -7,28 +7,25 @@
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     </head>
 
-  <body>
+<body>
 <h1>Conditional Design Exercise</h1>
 <br>
 
-<h2>Rules V.1</h2>
-<p>
-<strong> Person 1 </strong> (black pen) draws straight lines on page <br>
-<strong> Person 2 </strong> (green pen) must draw lines intersecting person 1’s lines <br>
-<strong> Person 3 </strong> (pencil) draws circles on the page <br>
-<i>Each have 30 seconds to do each step</i> <br>
-</p>
-<img src="images/version1.jpg" alt="">
+<div> <h2>Rules V.1</h2> <!--version 1-->
+  <p><strong> Person 1 </strong> (black pen) draws straight lines on page <br>
+  <strong> Person 2 </strong> (green pen) must draw lines intersecting person 1’s lines <br>
+  <strong> Person 3 </strong> (pencil) draws circles on the page <br>
+  <i>Each have 30 seconds to do each step</i><br> </p>
+  <img src="images/version1.jpg" alt="">
+  </div>
 <br>
 
-<h2>Rules V.2</h2>
-<p>
-<strong> Person 1 </strong> (black pen) draws straight lines on page <br>
-<strong> Person 2 </strong> (green) must draw lines perpendicularly intersecting person 1’s lines<br>
-<strong> Person 3 </strong> (pencil) draws circles on the page, cannot intersect with any of the previous lines<br>
-<i>Each have 30 seconds to do each step</i>
-</p>
-<img src="images/version2.jpg" alt="">
+<div> <h2>Rules V.2</h2> <!--version 2-->
+  <p> <strong> Person 1 </strong> (black pen) draws straight lines on page <br>
+  <strong> Person 2 </strong> (green) must draw lines perpendicularly intersecting person 1’s lines<br>
+  <strong> Person 3 </strong> (pencil) draws circles on the page, cannot intersect with any of the previous lines<br>
+  <i>Each have 30 seconds to do each step</i><br></p>
+  <img src="images/version2.jpg" alt="">
 
   </body>
 </html>
