--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-<DIV> <!--header-->
+<div> <!--header-->
     <h1 class="title">E</h1>
     <h1 class="title">L</h1>
     <h1 class="title">L</h1>
@@ -30,14 +30,13 @@
     target="_blank"><img src="http://i78.photobucket.com/albums/j112/rswedlo/gif/Checkerflag.gif"
     border="0" alt=" photo Checkerflag.gif"></a>
 </div>
-<div> <!--intro ? button-->
+<div> <!--intro "?" button-->
     <button onclick="myFunction()">?</button>
     <p id="demo"></p>
     <script>
     function myFunction() {
     document.getElementById("demo").innerHTML = "hey, my name's elliot. im a comm d major at parsons and im trying my best";}
     </script>
-
 
 <form> <!--form and button-->
   <p id="subtitle"> introduce yourself  </p>
