--- a/interview.html
+++ b/interview.html
@@ -8,24 +8,16 @@
   </head>
   <body>
   <!-- Side navigation -->
-  <div class="sidenav">
-<h1 id="title">IN <br> TE <br> RV<br> I E<br> W:</h1>
-  <!-- links not using
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
-    -->
-  </div>
+<div class="sidenav">
+  <h1 id="title">IN <br> TE <br> RV<br> I E<br> W:</h1> </div>
 
   <!-- Page content -->
-  <div class="main"> <!-- inteview text -->
-    <body>
+<div class="main"> <!-- inteview text --> <body>
     <p>
     <i> Elliot:</i>  So what can I interview you about?
     <br>
     <strong> Sydney: Like nothing, can you count how many times I say um?  </strong>
-     <br>
+    <br>
     <i> E: Haha sure.</i>
     <br>
     <strong> S: Really think about it. I don’t know anything about anything.</strong>
@@ -43,8 +35,8 @@
     <strong> S:  It has fourteen lines, usually about love, and usually by a guy about a woman who he can’t have.
     Usually in <a href="https://en.wikipedia.org/wiki/Iambic_pentameter">iambic pentameter</a>
     <small>(she stuttered).</small> There’s two different kinds but I can’t remember. American people were like <i>“we
-     want our own sonnet,”</i> and so an American sonnet is any poem with fourteen lines that calls itself a sonnet, cus that’s just
-     how it is. I’m bad at them because iambic pentameter stresses me out.</strong>
+    want our own sonnet,”</i> and so an American sonnet is any poem with fourteen lines that calls itself a sonnet, cus that’s just
+    how it is. I’m bad at them because iambic pentameter stresses me out.</strong>
     <br>
     <i> E: </i>  Yeah you know a lot about poetry.
     <br>
@@ -58,17 +50,16 @@
     <i> E: </i>  How come?
     <br>
     <strong> S:  Um, I like <i>Antony and Cleopatra </i> because it’s the most poetic one and it’s pretty emo.
-     And I like <i>Macbeth </i> because there’s witches, and I have this haircut so I have to like witches.</strong>
+    And I like <i>Macbeth </i> because there’s witches, and I have this haircut so I have to like witches.</strong>
     <br>
     <strong> E+S: </strong> <i>Haha </i>
     <br>
     <i> E: </i>  Anything else you wanna say?
     <br>
     <strong> S: No.</strong>
-    <br> <BR>
-<strong id="laughin"> END </strong>
+    <br><br>
+    <strong id="end"> END </strong>
     </p>
   </div>
-
   </body>
 </html>
