--- a/mirrorme.html
+++ b/mirrorme.html
@@ -7,19 +7,22 @@
     <link rel="stylesheet" href="css/mirrorme.css">
   </head>
   <body>
-<p> how are you? </p>
 
+<div> <!--how r u + radio toggle-->
+  <p> how are you? </p>
 <form>
   <input type="radio" name="x" value="male"> good<br>
   <input type="radio" name="x" value="female"> bad<br>
-</form>
+</form></div>
 
-<textarea id="box" name="message" rows="14" cols="30">
-lets talk...
-    </textarea>
-    <br>
+<div> <!--empty box-->
+  <textarea id="box" name="message" rows="14" cols="30">
+  lets talk...
+</textarea></div>
 
-<img id="mirror" src="images/mirror.jpg">
+<div> <!--mirror-->
+  <img id="mirror" src="images/mirror.jpg">
+</div>
 
-  </body>
+</body>
 </html>
