--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
   <details>
     <summary>projects</summary>
     <p>
+      <a href="https://elliotbohlen.github.io/creativecomputing/still">still life</a>
+      <br>
     <a href="https://elliotbohlen.github.io/creativecomputing/mirrorme">how are you</a>
     <br>
     <a href="https://elliotbohlen.github.io/creativecomputing/conditional">conditional design exercise</a>
