--- a/conditional.html
+++ b/conditional.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="images/red.jpg" type="image/gif">
     <title>Conditional Design Exercise</title>
     <link rel="stylesheet" href="css/conditional.css">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
