--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
   <details>
     <summary>projects</summary>
     <p>
-      <a href="https://elliotbohlen.github.io/creativecomputing/flyer">flyer</a>
+      <a href="flyer.html">flyer</a>
     <br>
-    <a href="https://elliotbohlen.github.io/creativecomputing/still">still life</a>
+    <a href="still.html">still life</a>
     <br>
-    <a href="https://elliotbohlen.github.io/creativecomputing/mirrorme">how are you</a>
+    <a href="mirrorme.html">how are you</a>
     <br>
-    <a href="https://elliotbohlen.github.io/creativecomputing/interview">interview</a>
+    <a href="interview.html">interview</a>
     <br>
-    <a href="https://elliotbohlen.github.io/creativecomputing/conditional">conditional design exercise</a>
+    <a href="conditional.html">conditional design exercise</a>
     <br>
     <a href="https://portfolio.newschool.edu/elliotbohlen/">electronic portfolio</a>
     <br>
