--- a/flyer.html
+++ b/flyer.html
@@ -11,7 +11,7 @@
   <body>
 
 
-<div class="content">
+<div class="grid">
   <div class="child1">  <div class="text"> <H1> 00PS! </H1></div> </div>
   <div class="child2"> </div>
   <div class="child1"> <div class="text"> <H2> @The R0SEM0NT </H2> </div> </div>
