--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
   <details>
     <summary>projects</summary>
     <p>
-      <a href="flyer.html">flyer</a>
+    <a href="grapefruit/home.html">grapefruit</a>
+    <br>
+    <a href="flyer.html">flyer</a>
     <br>
     <a href="still.html">still life</a>
     <br>
