fixing css link

--- a/grapefruit/voice.html
+++ b/grapefruit/voice.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <link rel="icon" href="grape.jpeg" type="image/gif">
     <title>grapefruit no.1</title>
+    <link rel="stylesheet" href="voice.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="VOICE.css">
   </head>
   <body>
 <div>
