--- a/grapefruit/home.html
+++ b/grapefruit/home.html
@@ -12,8 +12,8 @@
 <a href="voice.html">g</a>
 <a href="earth.html">r</a>
 <a href="orchestra.html">a</a>
-<a href="x.html">p</a>
-<a href="x.html">e</a>
+<a href="city.html">p</a>
+<a href="shoot.html">e</a>
 <a href="x.html">f</a>
 <a href="x.html">r</a>
 <a href="x.html">u</a>
