moved all files into folders

--- a/flyer/flyer.html
+++ b/flyer/flyer.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="images/OOPSicon.jpeg" type="image/gif">
+    <link rel="icon" href="../images/OOPSicon.jpeg" type="image/gif">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-    <link rel="stylesheet" href="css/flyer.css">
+    <link rel="stylesheet" href="flyer.css">
 
     <title>FLYER</title>
   </head>
