--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" href="images/red.jpg" type="image/gif">
     <title>ELLIOT</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   </head>
   <body>
@@ -25,11 +25,9 @@
     <h1 class="title">N</h1>
   </div>
 
-<div> <!--flag-->
-    <a href="http://s78.photobucket.com/user/rswedlo/media/gif/Checkerflag.gif.html"
-    target="_blank"><img src="http://i78.photobucket.com/albums/j112/rswedlo/gif/Checkerflag.gif"
-    border="0" alt=" photo Checkerflag.gif"></a>
-</div>
+ <img id="wiggle"src="images/wiggle.gif" alt="">
+
+
 <div> <!--intro "?" button-->
     <button onclick="myFunction()">?</button>
     <p id="demo"></p>
@@ -50,15 +48,15 @@
     <p>
     <a href="grapefruit/home.html">grapefruit</a>
     <br>
-    <a href="flyer.html">flyer</a>
+    <a href="flyer/flyer.html">flyer</a>
     <br>
-    <a href="still.html">still life</a>
+    <a href="intvstillconditional/still.html">still life</a>
     <br>
-    <a href="mirrorme.html">how are you</a>
+    <a href="self/mirrorme.html">how are you</a>
     <br>
-    <a href="interview.html">interview</a>
+    <a href="intvstillconditional/interview.html">interview</a>
     <br>
-    <a href="conditional.html">conditional design exercise</a>
+    <a href="intvstillconditional/conditional.html">conditional design exercise</a>
     <br>
     <a href="https://portfolio.newschool.edu/elliotbohlen/">electronic portfolio</a>
     <br>
