--- a/intvstillconditional/interview.html
+++ b/intvstillconditional/interview.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="images/red.jpg" type="image/gif">
+    <link rel="icon" href="../images/red.jpg" type="image/gif">
     <title>INTERVIEW</title>
-    <link rel="stylesheet" href="css/interviewstyle.css">
+    <link rel="stylesheet" href="interviewstyle.css">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   </head>
   <body>
