--- a/self/mirrorme.html
+++ b/self/mirrorme.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="images/sky.jpg" type="image/gif">
+    <link rel="icon" href="../images/sky.jpg" type="image/gif">
     <title>mirror me</title>
-    <link rel="stylesheet" href="css/mirrorme.css">
+    <link rel="stylesheet" href="mirrorme.css">
   </head>
   <body>
 
@@ -21,7 +21,7 @@
 </textarea></div>
 
 <div> <!--mirror-->
-  <img id="mirror" src="images/mirror.jpg">
+  <img id="mirror" src="../images/mirror.jpg">
 </div>
 
 </body>
