--- a/intvstillconditional/conditional.html
+++ b/intvstillconditional/conditional.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="images/red.jpg" type="image/gif">
+    <link rel="icon" href="../images/red.jpg" type="image/gif">
     <title>Conditional Design Exercise</title>
-    <link rel="stylesheet" href="css/conditional.css">
+    <link rel="stylesheet" href="conditional.css">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     </head>
 
@@ -17,7 +17,7 @@
   <strong> Person 2 </strong> (green pen) must draw lines intersecting person 1’s lines <br>
   <strong> Person 3 </strong> (pencil) draws circles on the page <br>
   <i>Each have 30 seconds to do each step</i><br> </p>
-  <img src="images/version1.jpg" alt="">
+  <img src="../images/version1.jpg" alt="">
   </div>
 <br>
 
@@ -26,7 +26,7 @@
   <strong> Person 2 </strong> (green) must draw lines perpendicularly intersecting person 1’s lines<br>
   <strong> Person 3 </strong> (pencil) draws circles on the page, cannot intersect with any of the previous lines<br>
   <i>Each have 30 seconds to do each step</i><br></p>
-  <img src="images/version2.jpg" alt="">
+  <img src="../images/version2.jpg" alt="">
 
   </body>
 </html>
