--- a/weather/weather.html
+++ b/weather/weather.html
@@ -6,13 +6,23 @@
     <link rel="icon" href="../images/sky.jpg" type="image/gif">
     <title>weatherdemo</title>
     <link rel="stylesheet" href="weather.css">
+
   </head>
 
   <body>
+    <div id="info">
+<div id="coordsText"> </div>
 <div id="tempText"></div>
 <div id="speedText"> </div>
-<div id="testText"> </div>
-<div id="tempCircle"> </div>
+<div id="humText"> </div>
+  </div>
+
+<div id="pic">
+  <div id="tempCircle"> </div>
+</div>
+ <div id="speedCircle"> </div>
+ <div id="humCircle"> </div>
+
 
 <script>
 $("document").ready(function(){
@@ -28,11 +38,15 @@ $("document").ready(function(){
      console.log(data.name);
      console.log(data.sys.country);
 //gets data to display on page, must div in body
+     $("#coordsText").html(data.name + "  //  " +data.sys.country)
      $("#tempText").html(data.main.temp)
      $("#speedText").html(data.wind.speed)
-     $("#testText").html(data.sys.country)
-    $("#tempCircle").css("width", data.main.temp)
-    $("#tempCircle").css("height",data.main.temp)
+     $("#humText").html(data.main.humidity + "%")
+
+    $("#tempCircle").css("height",data.main.temp * 10)
+    $("#speedCircle").css("height",data.wind.speed * 10)
+    $("#humCircle").css("height",data.main.humidity * 10)
+
    }
 
  })
