--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
   <details>
     <summary>projects</summary>
     <p>
+    <a href="weather/weather.html">weathertime</a>
+    <br>
+    <a href="clock/home.html">///timetime//</a>
+    <br>
     <a href="grapefruit/home.html">grapefruit</a>
     <br>
     <a href="flyer/flyer.html">flyer</a>
