--- a/weather/weather.html
+++ b/weather/weather.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="icon" href="../images/sky.jpg" type="image/gif">
-    <title>weatherdemo</title>
+    <title>weathertime</title>
     <link rel="stylesheet" href="weather.css">
 
   </head>
