--- a/weather/weather.html
+++ b/weather/weather.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <form id="target">
+    <form id="target" class="formy">
       <input class="formy" id="city" type="text" placeholder="Your City" value="">
     </form>
 
